--- a/Arrays-Bankist/style.css
+++ b/Arrays-Bankist/style.css
@@ -92,7 +92,7 @@ nav {
   grid-template-columns: 4fr 3fr;
   grid-template-rows: auto repeat(3, 15rem) auto;
   gap: 2rem;
-
+/*pacity is changed*/
   /* NOTE This creates the fade in/out anumation */
   opacity: 0;
   transition: all 1s;
@@ -294,4 +294,5 @@ h2 {
 
 .timer {
   font-weight: 600;
+
 }
