--- a/Arrays-Bankist/style.css
+++ b/Arrays-Bankist/style.css
@@ -93,7 +93,7 @@ nav {
   grid-template-rows: auto repeat(3, 15rem) auto;
   gap: 2rem;
 /*pacity is changed*/
-  /* NOTE This creates the fade in/out anumation */
+  /*  This creates the fade in/out anumation */
   opacity: 0;
   transition: all 1s;
 }
@@ -296,3 +296,4 @@ h2 {
   font-weight: 600;
 
 }
+
